configured Json file

--- a/config.json
+++ b/config.json
@@ -2,8 +2,8 @@
     "database": {
         "host": "localhost",
         "name": "pset7",
-        "username": "ashhar1145",
-        "password": "3vXt73bGW7mEcGnI"
+        "username": "mohanvashist001",
+        "password": "zrrJ8zNEdpuTwuty"
     }
 }
-skarasnrgj
+
